istio-destinationrule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: default
  namespace: gitea
spec:
  host: "*.gitea.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
